2004-09-22  Edward Counce  <ecounce@users.sourceforge.net>

	* added "make check" target in the samples directory

	* updated documentation about signal values, and removed duplicate
	documentation from README.

2004-09-21  Edward Counce  <ecounce@users.sourceforge.net>

	* added support for quoted signal values

	* reduced use of string comparisons while rendering

	* added copy constructors and assignment operators to classes

2004-09-20  Edward Counce  <ecounce@users.sourceforge.net>

	* Release 0.2

	* made scale a property of timing::diagram and moved supporting
	code into that class.

	* added man page.

2004-09-15  Edward Counce  <ecounce@users.sourceforge.net>

	* Release 0.1

	* Restructured for autoconf/automake.

2004-09-14  Edward Counce  <ecounce@users.sourceforge.net>

	* Added rudimentary exception handling at toplevel

	* Added Makefile.freebsd for compiling on FreeBSD.

	* Fixed license notice in source files.
	
	
