@@ -81,7 +81,7 @@ changing its value.
 .El
 .Pp
 Statements are seperated by the following symbols:
-.Bl -tag -width "=>"
+.Bl -tag -width "-tD>"
 .It ,
 The comma seperator is used to seperate statements without
 affecting the dependency list or clock (ie: the next statement will
@@ -95,6 +95,10 @@ increments the clock.
 .It =>
 The "causes" seperator renders dependency arrows based on the
 current list of dependencies and then resets the dependency list.
+.It -tD>
+The "delay" seperator renders a delay arrow from the last dependency
+with the annotation 
+.Em tD .
 .El
 .Pp
 Signal values are rendered according to the following rules:
