@@ -1,354 +1,0 @@
-<HTML><HEAD><TITLE>Manpage of DRAWTIMING</TITLE>
-</HEAD><BODY>
-<H1>DRAWTIMING</H1>
-Section: User Commands  (1)<BR><A HREF="#index">Index</A>
-<HR>
-<BR>BSD mandoc<BR>
-<A NAME="lbAB">&nbsp;</A>
-<H2>NAME</H2>
-
-
-
-<B>drawtiming</B>
-
- - generate timing diagram from signal description
-
-<A NAME="lbAC">&nbsp;</A>
-<H2>SYNOPSIS</H2>
-
-<B></B>
-
-
-[-<B>-verbose</B>
-
-]
-
-[-<B>-scale </B><I>factor</I>
-
-
-
-]
-
--<B>-output </B><I>target</I>
-
-
-
-<I>file ...</I>
-
-
-<A NAME="lbAD">&nbsp;</A>
-<H2>DESCRIPTION</H2>
-
-This application provides a command line tool for documenting hardware
-and software designs through ideal timing diagrams.  It reads signal
-descriptions from a text file with an intuitive syntax, and outputs an
-ideal timing diagram to an image file.  Notation typical of timing
-diagrams found in the Electrical Engineering discipline is used,
-including arrows indicating causal relationships between signal
-transitions.
-<P>
-
-The options are as follows:
-<DL COMPACT>
-<P>
-
-<DT><B>--verbose</B>
-
-
-<DD>
-Increase diagnostic output.
-<DT><B>--scale </B><I>factor</I>
-
-
-
-
-<DD>
-Scale the diagram by the given
-<I>factor</I>
-
- 
-The default scaling factor is 1.0.
-<DT><B>--output </B><I>target</I>
-
-
-
-
-<DD>
-The name and format of the output image is determined by
-<I>target</I>
-
- 
-<DT><B></B><I>file ...</I>
-
-
-<DD>
-The input files describe the signals to be diagrammed.  See the
-FILES
-
-and
-EXAMPLES
-
-sections for a description of their format.
-</DL>
-<P>
-
-<A NAME="lbAE">&nbsp;</A>
-<H2>FILES</H2>
-
-The following is a technical description of the input file syntax and
-semantics.  If you are reading this for the first time, you may want
-to skip ahead to the 
-EXAMPLES
-
-section.
-<P>
-
-The input file consists of a series of statements describing the
-signal transitions during each clock period of the timing diagram.
-Whitespace and comments following a 
-`#'
-
-are ignored.
-<P>
-
-<DL COMPACT>
-<P>
-
-<DT><B>SIGNAL=VALUE</B>
-<DD>
-This statement changes the value of a signal at the beginning of the
-current clock, and adds it to the list of signal dependencies.  The
-signal name may consist of one or more words consisting of
-alphanumerics and underscores joined by periods, 
-`signal.name'
-
-,
-for example.  The signal value format is described further on.
-<DT><B>SIGNAL</B>
-<DD>
-This statement adds a signal to the list of dependencies without
-changing its value.
-</DL>
-<P>
-
-<P>
-
-Statements are seperated by the following symbols:
-<DL COMPACT>
-<P>
-
-<DT><B>,</B>
-<DD>
-The comma seperator is used to seperate statements without
-affecting the dependency list or clock (ie: the next statement will
-add to the dependency list).
-<DT><B>;</B>
-<DD>
-The semicolon seperator resets the list of dependencies without
-incrementing the clock
-<DT><B>.</B>
-<DD>
-The period seperator resets the list of dependencies and
-increments the clock.
-<DT><B>=&gt;</B>
-<DD>
-The &quot;causes&quot; seperator renders dependency arrows based on the
-current list of dependencies and then resets the dependency list.
-</DL>
-<P>
-
-<P>
-
-Signal values are rendered according to the following rules:
-<DL COMPACT>
-<P>
-
-<DT><B>0 , 1 , true , false</B>
-<DD>
-A binary high/low signal.
-<DT><B>tick</B>
-<DD>
-A clock pulse which repeats.
-<DT><B>pulse</B>
-<DD>
-A one-shot clock pulse.
-<DT><B>X</B>
-<DD>
-A don't care value.
-<DT><B>Z</B>
-<DD>
-A tristate value.
-<DT>&quot;ABC&quot
-
-
-<DD>
-Any other alphanumeric token, or text enclosed in quotes is rendered
-as a state.  For example, 
-`&quot;1&quot;
-
-'
-
-,
-is rendered as a state, whereas,
-`1'
-
-,
-is rendered as a high signal.
-</DL>
-<P>
-
-<A NAME="lbAF">&nbsp;</A>
-<H2>EXAMPLES</H2>
-
-Let's look at an example input file, and parse its meaning.
-<P>
-
-
-<BLOCKQUOTE>
-<PRE>
-POWER=0, FIRE=0, ARMED=0, LED=OFF, COUNT=N.
-POWER=1 =&gt; LED=GREEN.
-FIRE=1. 
-FIRE =&gt; ARMED=1.
-FIRE=0.
-FIRE=1.
-FIRE, ARMED =&gt; LED=RED;
-FIRE =&gt; COUNT=&quot;N+1&quot;.
-</PRE>
-</BLOCKQUOTE>
-
-<P>
-
-This input file descibes the changes in five signals over a period of
-seven clock cycles.  The end of each clock cycle is indicated with a
-period.  For example, the following line indicates a single signal,
-named
-`FIRE'
-
-became true during a clock cycle:
-<P>
-
-
-<BLOCKQUOTE><TT>FIRE=1.</TT></BLOCKQUOTE>
-<P>
-
-The first clock period of the input file provides the initial value
-for all signals to be diagrammed.  The signals will appear on the
-timing diagram in the order they first appear in the input file.
-Signals are assumed to have the
-<i>don't care</i>
-
-value if their initial value is not given.  
-<P>
-
-Independent signal transitions which occur simultaneously are normally
-seperated by commas. Since signals aren't normally expected to change
-simultaneously, the initial state is a good example of this:
-<P>
-
-
-<BLOCKQUOTE><TT>POWER=0, FIRE=0, ARMED=0, LED=OFF, COUNT=N.</TT></BLOCKQUOTE>
-<P>
-
-Dependencies can also be indicated for a signal transition.
-Dependencies are rendered as arrows on the timing diagram from the
-last change in each dependency to the dependent signal transition.
-Here, the previous change in the state of
-`FIRE'
-
-causes a change in the 
-`ARMED'
-
-signal.
-<P>
-
-
-<BLOCKQUOTE><TT>FIRE =&gt; ARMED=1.</TT></BLOCKQUOTE>
-<P>
-
-To indicate that a change in one signal causes an immediate change in
-another signal, list both signal changes in the same clock period:
-<P>
-
-
-<BLOCKQUOTE><TT>POWER=1 =&gt; LED=GREEN.</TT></BLOCKQUOTE>
-<P>
-
-For signal state changes with multiple dependencies, seperate the
-dependencies with commas:
-<P>
-
-
-<BLOCKQUOTE><TT>FIRE, ARMED =&gt; LED=RED.</TT></BLOCKQUOTE>
-<P>
-
-Sometimes, a single dependency causes multiple independent signals to
-change.  Use a semicolon to start a new list of dependencies.
-Modifying the previous line to indicate that
-`FIRE'
-
-also causes 
-`COUNT'
-
-to increment yields:
-<P>
-
-
-<BLOCKQUOTE><TT>FIRE, ARMED =&gt; LED=RED;</TT></BLOCKQUOTE>
-
-<BLOCKQUOTE><TT>FIRE =&gt; COUNT=&quot;N+1&quot;.</TT></BLOCKQUOTE>
-<P>
-
-You can find this example and others along with their generated timing
-diagrams on the homepage for
-<B></B>
-
-
-at
-`<A HREF="http://drawtiming.sourceforge.net'">http://drawtiming.sourceforge.net'</A>
-
-<A NAME="lbAG">&nbsp;</A>
-<H2>DIAGNOSTICS</H2>
-
-Exit status is 0 on success, and 2 if the command
-fails.
-<A NAME="lbAH">&nbsp;</A>
-<H2>COMPATIBILITY</H2>
-
-The
-<B></B>
-
-
-command has been tested on FreeBSD, Linux, and Cygwin.
-<A NAME="lbAI">&nbsp;</A>
-<H2>AUTHORS</H2>
-
-This software package was written by
-Edward Counce
-
-<A NAME="lbAJ">&nbsp;</A>
-<H2>BUGS</H2>
-
-None reported.
-<P>
-
-<HR>
-<A NAME="index">&nbsp;</A><H2>Index</H2>
-<DL>
-<DT><A HREF="#lbAB">NAME</A><DD>
-<DT><A HREF="#lbAC">SYNOPSIS</A><DD>
-<DT><A HREF="#lbAD">DESCRIPTION</A><DD>
-<DT><A HREF="#lbAE">FILES</A><DD>
-<DT><A HREF="#lbAF">EXAMPLES</A><DD>
-<DT><A HREF="#lbAG">DIAGNOSTICS</A><DD>
-<DT><A HREF="#lbAH">COMPATIBILITY</A><DD>
-<DT><A HREF="#lbAI">AUTHORS</A><DD>
-<DT><A HREF="#lbAJ">BUGS</A><DD>
-</DL>
-<HR>
-This document was created by
-man2html,
-using the manual pages.<BR>
-Time:  GMT, September 22, 2004
-</BODY>
-</HTML>
